# jepa-jax

./: .gitignore  LICENSE  input_pipeline.py  main.py  model.py  pyproject.toml  train.py
.github/: README.md
.github/workflows/: large_tests.yml  style_checks.yml
configs/: default.py  test.py
tests/: README.md  test_masking.py  test_pretrained.py
